# qc-crypto

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RELEASE-CHECKLIST.md  ibm-quantum-setup.md  linkedin-posts.md
docs/article/: 00-why-rsa-works.md  01-shor-simulator.md  02-shor-hardware.md  03-grover-and-aes.md  04-mlkem.md  README.md
scripts/: make_grover_figures.py  make_shor_figures.py  make_wall_chart.py
src/qcrypto/: __init__.py  _logging.py  cli.py
src/qcrypto/analysis/: __init__.py  symmetric_security.py
src/qcrypto/backends/: __init__.py  ibm.py  runner.py
src/qcrypto/classical/: __init__.py  factoring.py  number_theory.py  rsa.py
src/qcrypto/pqc/: __init__.py  mlkem.py
src/qcrypto/quantum/: __init__.py  grover.py  modular_arithmetic.py  post_process.py  qft.py  shor.py
tests/: test_cli.py  test_factoring.py  test_grover.py  test_mlkem.py  test_number_theory.py  test_post_process.py  test_quantum_circuits.py  test_rsa.py  test_symmetric_security.py
