[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcrypto"
version = "0.1.0"
description = "A hands-on, honest tour of how quantum computing affects modern cryptography (Shor, Grover, ML-KEM)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hannan" }]
keywords = ["quantum-computing", "cryptography", "rsa", "shor", "grover", "post-quantum", "qiskit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

# Phase 0 dependencies are deliberately minimal and purely classical.
# The quantum stack (qiskit, qiskit-aer, qiskit-ibm-runtime) is introduced in
# Phase 1 as an optional extra so the classical foundation stays lightweight and
# fast to install/test in CI.
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=1.2,<2.0",
    "qiskit-aer>=0.15",
    "qiskit-ibm-runtime>=0.28",
    "pylatexenc>=2.10",  # required for circuit.draw('mpl')
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
qcrypto = "qcrypto.cli:app"

[project.urls]
Repository = "https://github.com/hannan/RSA-qc"

[tool.hatch.build.targets.wheel]
packages = ["src/qcrypto"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, strict-but-not-hostile ruleset: pyflakes, pycodestyle, isort,
# pyupgrade, bugbear, and comprehensions. Documented so contributors know WHY.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
