[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcrypto"
version = "0.1.0"
description = "A hands-on, honest tour of how quantum computing affects modern cryptography (Shor, Grover, ML-KEM)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hannan" }]
keywords = ["quantum-computing", "cryptography", "rsa", "shor", "grover", "post-quantum", "qiskit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

# Phase 0 dependencies are deliberately minimal and purely classical.
# The quantum stack (qiskit, qiskit-aer, qiskit-ibm-runtime) is introduced in
# Phase 1 as an optional extra so the classical foundation stays lightweight and
# fast to install/test in CI.
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
# Qiskit >= 2.1 makes `symengine` optional (it is only used for legacy QPY
# deserialization, which we do not need). Older Qiskit hard-required it, forcing a
# from-source build that needs a C++/CMake toolchain and has no wheel on newer
# Python/Windows combinations. Pinning >= 2.1 avoids installing symengine entirely.
quantum = [
    "qiskit>=2.1,<3.0",
    "qiskit-aer>=0.16",
    "pylatexenc>=2.10",  # required for circuit.draw('mpl')
    "matplotlib>=3.8",
]
# Phase 2 (real IBM Quantum hardware) only. Kept separate so the Phase 1 quantum
# install stays lean.
hardware = [
    "qiskit-ibm-runtime>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
qcrypto = "qcrypto.cli:app"

[project.urls]
Repository = "https://github.com/hannan/RSA-qc"

[tool.hatch.build.targets.wheel]
packages = ["src/qcrypto"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, strict-but-not-hostile ruleset: pyflakes, pycodestyle, isort,
# pyupgrade, bugbear, and comprehensions. Documented so contributors know WHY.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
# Qiskit ships partial/py.typed stubs; treat its dynamic surface as Any rather
# than failing strict mode, and don't flag the resulting Any returns. This keeps
# CI (which installs only the classical [dev] extras) green while still fully
# type-checking our own code.
warn_return_any = false
files = ["src"]

[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*"]
ignore_missing_imports = true

# numpy's shipped stubs use PEP 695 `type` syntax gated to 3.12+, which trips mypy
# when configured for an older target. We don't need to type-check numpy itself;
# skip following it and treat its surface as Any.
[[tool.mypy.overrides]]
module = ["numpy"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "slow: end-to-end simulator runs (deselect with '-m \"not slow\"')",
]
